added gitignore changes

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ layout: compress
     <body class="body">
         <div class="container">
             <header class="header">
-                <h1>Aurore & Gérard<span>Once upon a love</span></h1>
+                <h1>Walk In Tour<span>Once upon in time</span></h1>
             </header>
             <div class="content">
                 <!-- trianglify pattern container -->
